Fixing spacing on nav bar

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,9 +1,3 @@
-/* Always set the map height explicitly to define the size of the div
- * element that contains the map. */
-#map {
-  height: 100%;
-}
-
 /* Optional: Makes the sample page fill the window. */
 html,
 body {
@@ -20,6 +14,9 @@ body {
   position: absolute;
 }
 
+#mainNav {
+  height: 74px;
+}
 /* Optional: Makes the sample page fill the window. */
 html,
 body {
@@ -117,21 +114,47 @@ body {
   height: 47px;
   line-height: 47px;
   transform: translateX(0%);
-
 }
 
-.mt-1 {
-  margin-top: 1rem;
+/* Margin */
+.m-1 {
+  margin: 1rem;
 }
-.mt-0 {
-  margin-top: 0;
+.m-2 {
+  margin: 2rem;
 }
+
+/* Margin Top */
+
+/* Margin Bottom */
 .mb-1 {
   margin-bottom: 1rem;
 }
 .mb-2 {
   margin-bottom: 2rem;
 }
+/* Margin Top */
+.mt-1 {
+  margin-top: 1rem;
+}
+.mt-2 {
+  margin-top: 2rem;
+}
+/* Margin Left */
+.ml-1 {
+  margin-left: 1rem;
+}
+.ml-2 {
+  margin-left: 2rem;
+}
+/* Padding */
+.p-1 {
+  padding: 1rem;
+}
+.p-2 {
+  padding: 2rem;
+}
+/* Padding Right */
 .pr-1 {
   padding-right: 1rem;
 }
